--- a/.github/workflows/buildapp.yml
+++ b/.github/workflows/buildapp.yml
@@ -13,7 +13,7 @@ on:
         type: string
       decrypted_youtube_url:
         description: "Direct URL to the decrypted YouTube ipa. The version of YouTube will be detected automatically."
-        default: "https://drive.google.com/file/d/1VZQ90vuQPsuDZUrQD2CAtuU1EdMQ4U8B/view?usp=drive_link"
+        default: "https://drive.google.com/file/d/1-eEYZnhgjj_VOBtDc5FyXVvkaQq6PLta/view?usp=sharing"
         required: false
         type: string
       bundle_id:
